syntax = "proto3";

package protocol;

// LoginRequest 登陆请求
message LoginRequest {
  string Username = 1;
  string Password = 2;
  string Email = 3;
}
// LoginResponse 登陆响应
message LoginResponse{
  bool Status = 1;
  string Message = 2;
  uint64 HttpCode = 3;
}

service LoginService {
  // 准备登陆
  rpc ReadyLogin(LoginRequest) returns(LoginResponse){};
  // 是否注册，调用注册服务
  rpc IsRegister(LoginRequest) returns(LoginResponse){};
}